# mulas

./: .gitignore  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
Presentation/: ESTRUCTURA_DETALLADA.md  GUIA_GRAFICOS.md  INDICE.md  QUICKSTART.md  README.md  RESUMEN.txt  presentation.tex
Report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
discrete_logistics/: __init__.py  cli.py
discrete_logistics/algorithms/: __init__.py  approximation.py  base.py  branch_and_bound.py  brute_force.py  dynamic_programming.py  external_adapters.py  gemini.py  greedy.py  hybrid.py  metaheuristics.py  qwen.py
discrete_logistics/benchmarks/: __init__.py  analysis.py  analyze_runtime_results.py  comparison_test.py  instances.py  manage_checkpoints.py  optimality_analysis.py  plot_complexity_orders.py  plot_optimality_gaps.py  run_algorithms.py  runner.py  scalability_analysis.py  statistical_framework.py
discrete_logistics/benchmarks/results/: optimality_gaps.csv  runtime_stats.csv  runtime_vs_size.csv
discrete_logistics/core/: __init__.py  instance_generator.py  problem.py
discrete_logistics/dashboard/: __init__.py  app.py  components.py  interactive_components.py  modern_animations.py  modern_components.py  shared.py
discrete_logistics/dashboard/pages/: 1_🔬_Solucionador.py  2_📊_Análisis.py  3_📚_Teoría.py  4_⚙️_Configuración.py  5_🧬_Algoritmo_Hibrido.py
discrete_logistics/theory/: __init__.py  complexity.py  formalization.py  pseudocode.py
discrete_logistics/utils/: __init__.py  exporters.py  helpers.py  validators.py
discrete_logistics/visualizations/: __init__.py  advanced_plots.py  animations.py  interactive.py  plots.py
docs/: HYBRID_ALGORITHM_DESIGN.md
notebooks/: tutorial.ipynb
tests/: __init__.py  conftest.py  test_algorithms.py  test_core.py  test_hybrid.py  test_integration.py  test_invariants.py
